--- a/src/component/Calculator.scss
+++ b/src/component/Calculator.scss
@@ -1,3 +1,10 @@
+.display {
+    width: 320px;
+    margin: 0 auto;
+    text-align: right;
+    font-size: 32px;
+}
+
 .buttonPanel {
     button {
         width: 80px;
